--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sqlome
 Title: Build SQLite tables of microRNAs and Transcription Factors-gene Correlations
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: person("Mahmoud", "Ahmed",
     email = "mahmoud.s.fahmy@students.kasralainy.edu.eg",
     role = c("aut", "cre"))
@@ -25,4 +25,5 @@ Imports: RTCGA,
     org.Hs.eg.db,
     AnnotationDbi,
     stats
-Suggests: testthat
+Suggests: testthat,
+    covr
