--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
-sudo: false
+language: r
+r:
+  - bioc-devel
+  - bioc-release
 cache: packages
+r_packages:
+  - covr
+warnings_are_errors: false
 after_success:
-  - Rscript -e 'covr::codecov()'
+  - Rscript -e 'library(covr); codecov()'
